--- a/Bootstrap/Transparent-navbar-and-background-image/css/custom.css
+++ b/Bootstrap/Transparent-navbar-and-background-image/css/custom.css
@@ -10,6 +10,9 @@ html {
 
 body {
 	background-color:transparent;
+	font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight: 400;
+	letter-spacing: 1px;
 	min-height:1000px;
 }
 
