--- a/Bootstrap/template/index.html
+++ b/Bootstrap/template/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="">
 		<title>Shrinking Navbar Example</title>
 		<link rel="stylesheet" href="css/bootstrap.css" />
-		<link rel="stylesheet" href="css/custom.css" />	
+		<link rel="stylesheet" href="css/custom.min.css" />	
 		 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -46,12 +46,12 @@
 				</div>
 			</nav>
 								
-			<div class="row main">
+			<main role="main" class="row main">
 				
 				<!-- Main hero unit for a primary marketing message or call to action -->
 				<div id="intro" class="jumbotron intro-section">
 					<h1>Hello, world!</h1>
-					<p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse iaculis, nunc id tincidunt euismod, metus justo tincidunt libero, id efficitur enim dui non libero.</p>
 					<p><a class="btn btn-primary btn-large page-scroll" href="#about">Learn more &raquo;</a></p>
 				</div>
 					
@@ -62,7 +62,7 @@
 						<div class="row">
 						
 							<div class="col-lg-12 text-center heading-wrapper">
-								<h2 class="section-heading">At Your Service</h2>
+								<h2 class="section-heading">Service Section</h2>
 								<hr>
 							</div>
 						
@@ -70,28 +70,28 @@
 								<div class="service-box">
 									<i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
 									<h3>Service 1</h3>
-									<p class="text-muted">Our templates are updated regularly so they don't break.</p>
+									<p class="text-muted">Aenean lobortis turpis id dui sagittis tempus ultricies tellus.</p>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6 text-center">
 								<div class="service-box">
 									<i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
 									<h3>Service 2</h3>
-									<p class="text-muted">You can use this theme as is, or you can make changes!</p>
+									<p class="text-muted">Cras iaculis dictum dictum nulla facilisi morbi sed erat .</p>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6 text-center">
 								<div class="service-box">
 									<i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
 									<h3>Service 3</h3>
-									<p class="text-muted">We update dependencies to keep things fresh.</p>
+									<p class="text-muted">Maecenas ultricies tellus ex, ut pellentesque lorem.</p>
 								</div>
 							</div>
 							<div class="col-lg-3 col-md-6 text-center">
 								<div class="service-box">
 									<i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
 									<h3>Service 4</h3>
-									<p class="text-muted">You have to make your websites with love these days!</p>
+									<p class="text-muted">Vestibulum a risus nisl. Suspendisse aliquet orci sem, sit!</p>
 								</div>
 							</div>
 						</div>
@@ -119,8 +119,9 @@
 				<section id="team" class="team-section">
 					<div class="container">
 						<div class="row">
-							<div class="col-lg-12">
-								<h1>Team Section</h1>
+							<div class="col-lg-12 text-center heading-wrapper">
+								<h2 class="section-heading">Team Section</h2>
+								<hr>
 							</div>
 						</div>
 					</div>
@@ -131,8 +132,9 @@
 				<section id="portfolio" class="portfolio-section">
 					<div class="container">
 						<div class="row">
-							<div class="col-lg-12">
-								<h1>portfolio Section</h1>
+							<div class="col-lg-12 text-center heading-wrapper">
+								<h2 class="section-heading">Portfolio Section</h2>
+								<hr>
 							</div>
 						</div>
 					</div>
@@ -152,6 +154,47 @@
                             </div>
                         </div>
                     </div>
+					<div class="row">
+						<div class="col-lg-8 col-lg-offset-2">
+							<form name="sentMessage" id="contactForm" action="includes/mail.php" novalidate>
+								<div class="row control-group">
+									<div class="form-group col-xs-12 floating-label-form-group controls floating-label-form-group-with-value">
+										<label>Name</label>
+										<input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+										<p class="help-block text-danger"></p>
+									</div>
+								</div>
+								<div class="row control-group">
+									<div class="form-group col-xs-12 floating-label-form-group controls">
+										<label>Email Address</label>
+										<input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+										<p class="help-block text-danger"></p>
+									</div>
+								</div>
+								<div class="row control-group">
+									<div class="form-group col-xs-12 floating-label-form-group controls">
+										<label>Phone Number</label>
+										<input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+										<p class="help-block text-danger"></p>
+									</div>
+								</div>
+								<div class="row control-group">
+									<div class="form-group col-xs-12 floating-label-form-group controls">
+										<label>Message</label>
+										<textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+										<p class="help-block text-danger"></p>
+									</div>
+								</div>
+								<br>
+								<div id="success"></div>
+								<div class="row">
+									<div class="form-group col-xs-12">
+										<button type="submit" class="btn btn-success btn-lg">Send</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
 				</section>
 				
 				
@@ -159,7 +202,7 @@
 					<p>&copy; 2015 - Federico Venturino</p>
 				</footer>
 				
-			</div>
+			</main>
 				
 		</div>		
 		
